Changelog
=========
[David Ichim - david.ichim@eaudeweb.ro]

0.2-dev - (unreleased)
----------------------

0.1 - (2011-02-22)
------------------
 * Feature: eggified product to Products.NavigationManager [ichimdav #2931]
 * Change: fixed a lot of the errors and warnings that pylint gave [ichimdav #4140]
 * Initial release
