@@ -4,6 +4,7 @@ Changelog
 
 0.2-dev - (unreleased)
 ----------------------
+ * Bug fix: fixes install method [ichimdav #2931] 
 
 0.1 - (2011-02-22)
 ------------------
